# LLM_Course

./: .gitignore  00_LLM_Learning_Path_1_Intro.ipynb  01_01_LLM_Learning_Path_2_Prompt_Engineering.ipynb  01_LLM_Learning_Path_2_Prompt_Engineering.ipynb  02_LLM_Learning_Path_3_RAG.ipynb  04_LLM_Learning_Path_5_Agents.ipynb  LLM_Learning_Path_1_Intro.ipynb  README.md  pyproject.toml
chainlit_draft/: app.py  requirements.txt
persist/: chroma.sqlite3
rag/: create_db.py  rag_chatbot.py  rag_chatbot_2.py
