[project]
name = "llm-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Napsugar Kelemen",email = "napsugar.kelemen@qubiz.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "langchain-community (>=0.3.29,<0.4.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "openai (>=1.104.2,<2.0.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "ipynb (>=0.5.1,<0.6.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "langchain-core (>=0.3.75,<0.4.0)",
    "chainlit (>=2.7.2,<3.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
